--- a/PortfolioAce/Views/SystemSecurityPricesView.xaml
+++ b/PortfolioAce/Views/SystemSecurityPricesView.xaml
@@ -59,7 +59,7 @@
             </StackPanel>
         </DockPanel>
         <Button Grid.Row="2" Grid.Column="1" Command="{Binding SaveSecurityPriceCommand}" Style="{DynamicResource MaterialDesignFlatDarkBgButton}"
-                Margin="0,5,0,0" Content="Update Prices from API" Width="200">
+                Margin="0,5,0,0" Content="Update Prices from API" Width="200" Visibility="{Binding ShowAPIButton, UpdateSourceTrigger=PropertyChanged}" >
             <Button.ToolTip>
                 <TextBlock Text="Checks AlphaVantage for the latest prices for this ticker and saves new prices to the DataBase"/>
             </Button.ToolTip>
