--- a/PortfolioAce/Views/AllFundsView.xaml
+++ b/PortfolioAce/Views/AllFundsView.xaml
@@ -138,11 +138,11 @@
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
                                         <Button Style="{DynamicResource MaterialDesignFlatDarkBgButton}" 
-                                            Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:AllFundsView}},Path=DataContext.ShowPositionDetailsCommand}">
+                                            Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:AllFundsView}},Path=DataContext.ShowPositionDetailsCommand}" Height="24">
                                             <Button.ToolTip>
                                                 <TextBlock Text="{Binding Position.security.Symbol, StringFormat={}Position Breakdown for {0}}"/>
                                             </Button.ToolTip>
-                                            <Image Source="/PortfolioAce;component/Resources\icons8-positionBreakdown-24.png"/>
+                                            <Image Source="/PortfolioAce;component/Resources\icons8-moreDetails-24.png"/>
                                         </Button>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -185,23 +185,25 @@
                                         <StackPanel Orientation="Horizontal">
                                             <Button Style="{DynamicResource MaterialDesignFlatDarkBgButton}" IsEnabled="{Binding isLocked, Converter={StaticResource invertBoolConverter}}" 
                                                     Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:AllFundsView}},Path=DataContext.ShowEditTradeCommand}"
-                                                    Visibility="{Binding isActive, Converter={StaticResource BooleanToVisibilityConverter}}">
+                                                    Visibility="{Binding isActive, Converter={StaticResource BooleanToVisibilityConverter}}" Height="20">
                                                 <Button.ToolTip>
                                                     <TextBlock Text="Edit Trade"/>
                                                 </Button.ToolTip>
                                                 <Image Source="/PortfolioAce;component/Resources\icons8-editTrade-24.png"/>
-                                            </Button> <!-- Edit -->
+                                            </Button>
+                                            <!-- Edit -->
                                             <Button Style="{DynamicResource MaterialDesignFlatDarkBgButton}" Margin="5,0,0,0" IsEnabled="{Binding isLocked, Converter={StaticResource invertBoolConverter}}"
                                                     Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:AllFundsView}},Path=DataContext.ShowDeleteTradeCommand}"
-                                                    Visibility="{Binding isActive, Converter={StaticResource BooleanToVisibilityConverter}}">
+                                                    Visibility="{Binding isActive, Converter={StaticResource BooleanToVisibilityConverter}}" Height="20">
                                                 <Button.ToolTip>
                                                     <TextBlock Text="Delete Trade"/>
                                                 </Button.ToolTip>
                                                 <Image Source="/PortfolioAce;component/Resources\icons8-deleteTrade-24.png"/>
-                                            </Button> <!-- Delete  (which deactivates the trade) -->
+                                            </Button>
+                                            <!-- Delete  (which deactivates the trade) -->
                                             <Button Style="{DynamicResource MaterialDesignFlatDarkBgButton}"
                                                     Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:AllFundsView}},Path=DataContext.ShowRestoreTradeCommand}"
-                                                    Visibility="{Binding isActive, Converter={StaticResource invertBoolToVisibilityConverter}}">
+                                                    Visibility="{Binding isActive, Converter={StaticResource invertBoolToVisibilityConverter}}" Height="20">
                                                 <Button.ToolTip>
                                                     <TextBlock Text="Restore Trade"/>
                                                 </Button.ToolTip>
@@ -216,7 +218,7 @@
                 </TabItem>
                 <TabItem Header="Cash Book">
                     <DataGrid Name="dgCashBook" ColumnWidth="*" ItemsSource="{Binding Path=dgFundCashBook, UpdateSourceTrigger=PropertyChanged}" 
-                              RowBackground="GhostWhite" AlternatingRowBackground="White" SelectedItem="{Binding selectedTransaction}"
+                              SelectedItem="{Binding selectedTransaction}"
                               VerticalScrollBarVisibility="Auto" AutoGenerateColumns="False" IsReadOnly="True" HorizontalScrollBarVisibility="Auto">
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="Type" Binding="{Binding TransactionType.TypeName}" Width="SizeToCells"/>
@@ -231,7 +233,7 @@
                                     <DataTemplate>
                                         <StackPanel Orientation="Horizontal">
                                             <Button Style="{DynamicResource MaterialDesignFlatDarkBgButton}" IsEnabled="{Binding isActive}" 
-                                                    Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:AllFundsView}},Path=DataContext.ShowEditCashTradeCommand}">
+                                                    Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:AllFundsView}},Path=DataContext.ShowEditCashTradeCommand}" Height="20">
                                                 <Button.Visibility>
                                                     <MultiBinding Converter="{StaticResource mvbConverter}">
                                                         <Binding Path="isActive" />
@@ -245,7 +247,7 @@
                                             </Button>
                                             <!-- Edit cash trade -->
                                             <Button Style="{DynamicResource MaterialDesignFlatDarkBgButton}" Margin="5,0,0,0" IsEnabled="{Binding isActive}"
-                                                    Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:AllFundsView}},Path=DataContext.ShowDeleteTradeCommand}">
+                                                    Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:AllFundsView}},Path=DataContext.ShowDeleteTradeCommand}" Height="20">
                                                 <Button.Visibility>
                                                     <MultiBinding Converter="{StaticResource mvbConverter}">
                                                         <Binding Path="isActive" />
@@ -260,7 +262,7 @@
                                             <!-- Delete  (which deactivates the trade) -->
                                             <Button Style="{DynamicResource MaterialDesignFlatDarkBgButton}" Margin="5,0,0,0" IsEnabled="{Binding isActive, Converter={StaticResource invertBoolConverter}}"
                                                     Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:AllFundsView}},Path=DataContext.ShowRestoreTradeCommand}"
-                                                    Visibility="{Binding isCashTransaction, Converter={StaticResource BooleanToVisibilityConverter}}">
+                                                    Visibility="{Binding isCashTransaction, Converter={StaticResource BooleanToVisibilityConverter}}" Height="20">
                                                 <Button.ToolTip>
                                                     <TextBlock Text="Restore Trade"/>
                                                 </Button.ToolTip>
