--- a/PortfolioAce/Views/AllFundsView.xaml
+++ b/PortfolioAce/Views/AllFundsView.xaml
@@ -152,7 +152,6 @@
                 </TabItem>
                 <TabItem Header="Cash Holdings">
                     <DataGrid Name="dgCashHoldings" ColumnWidth="*"  ItemsSource="{Binding Path=dgFundCashHoldings, UpdateSourceTrigger=PropertyChanged}" 
-                              RowBackground="GhostWhite" AlternatingRowBackground="White"
                               VerticalScrollBarVisibility="Auto" AutoGenerateColumns="False" IsReadOnly="True">
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="Currency" Binding="{Binding CashPosition.currency.Symbol}" Width="100" />
@@ -165,11 +164,10 @@
                 </TabItem>
                 <TabItem Header="Trade History">
                     <DataGrid Name="dgTradeHistory" ColumnWidth="*" ItemsSource="{Binding Path=dgFundTrades, UpdateSourceTrigger=PropertyChanged}" SelectedItem="{Binding selectedTransaction}"
-                              RowBackground="GhostWhite" AlternatingRowBackground="White"
                               VerticalScrollBarVisibility="Auto" AutoGenerateColumns="False" IsReadOnly="True">
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="Type"  Binding="{Binding TransactionType.TypeName}" Width="SizeToCells"/>
-                            <DataGridTextColumn Header="Name" Binding="{Binding Security.SecurityName}" Width="SizeToHeader"/>
+                            <DataGridTextColumn Header="Name" Binding="{Binding Security.SecurityName}" Width="SizeToCells"/>
                             <DataGridTextColumn Header="Symbol" Binding="{Binding Security.Symbol}" Width="SizeToHeader"/>
                             <DataGridTextColumn Header="Quantity" Binding="{Binding Quantity, StringFormat=N2}" Width="SizeToHeader"/>
                             <DataGridTextColumn Header="Price" Binding="{Binding Price, StringFormat=N2}" Width="SizeToCells"/>
@@ -277,7 +275,6 @@
                 </TabItem>
                 <TabItem Header="Issuance">
                     <DataGrid Name="dgSubsAndReds" ColumnWidth="*" ItemsSource="{Binding Path=dgFundTA, UpdateSourceTrigger=PropertyChanged}" 
-                              RowBackground="GhostWhite" AlternatingRowBackground="White"
                               VerticalScrollBarVisibility="Auto" AutoGenerateColumns="False" IsReadOnly="True">
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="Type" Binding="{Binding IssueType}" />
