--- a/PortfolioAce/Views/Modals/AddFXTradeWindow.xaml
+++ b/PortfolioAce/Views/Modals/AddFXTradeWindow.xaml
@@ -5,8 +5,101 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PortfolioAce.Views.Modals"
         mc:Ignorable="d"
-        Title="AddFXTradeWindow" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+        Title="Create a New FX Trade" Height="400" Width="410">
+    <Border Background="GhostWhite" BorderBrush="Silver" BorderThickness="1" CornerRadius="8,8,3,3" Margin="3">
+        <Grid Margin="1">
+            <Grid.Resources>
+                <!-- HERE i can set properties for all similar objects in the grid i.e. textboxes-->
+                <Style TargetType="TextBox">
+                    <Setter Property="Margin" Value="2" />
+                    <Setter Property="Padding" Value="2" />
+                    <Setter Property="Background" Value="White"/>
+                    <Setter Property="Validation.ErrorTemplate">
+                        <Setter.Value>
+                            <ControlTemplate>
+                                <AdornedElementPlaceholder/>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="TextBox">
+                                <StackPanel>
+                                    <Border Padding="{TemplateBinding Padding}"
+                                    BorderBrush="{TemplateBinding BorderBrush}"
+                                    BorderThickness="{TemplateBinding BorderThickness}"
+                                    CornerRadius="3">
+                                        <ScrollViewer x:Name="PART_ContentHost" />
+                                    </Border>
+                                    <ItemsControl ItemsSource="{TemplateBinding Validation.Errors}">
+                                        <ItemsControl.ItemTemplate>
+                                            <DataTemplate>
+                                                <TextBlock Foreground="Red" Text="{Binding ErrorContent}" />
+                                            </DataTemplate>
+                                        </ItemsControl.ItemTemplate>
+                                    </ItemsControl>
+                                </StackPanel>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </Grid.Resources>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Label Grid.Row="1">Buy Currency:</Label>
+            <ComboBox ItemsSource="{Binding cmbCurrency}" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="1" Margin="0,0,0,2" SelectedItem="{Binding Path=BuyCurrency, UpdateSourceTrigger=PropertyChanged}">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding }"/>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
+            <Label Grid.Row="2">Sell Currency:</Label>
+            <ComboBox ItemsSource="{Binding cmbCurrency}" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="1" Margin="0,0,0,2" SelectedItem="{Binding Path=SellCurrency, UpdateSourceTrigger=PropertyChanged}">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding }"/>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
+            <Label Grid.Row="3">Buy Amount:</Label>
+            <TextBox Text="{Binding BuyAmount, UpdateSourceTrigger=PropertyChanged, StringFormat=N2}" Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="1" Margin="0,0,0,2"/>
+            <Label Grid.Row="4">Price:</Label>
+            <TextBox Text="{Binding Price, UpdateSourceTrigger=PropertyChanged}" Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="1" Margin="0,0,0,2"/>
+            <Label Grid.Row="5">Sell Amount:</Label>
+            <Label Content="{Binding SellAmountLabel, UpdateSourceTrigger=PropertyChanged}" Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="1" Margin="0,0,0,2"/>
+            <Label Grid.Row="6">Trade Date:</Label>
+            <DatePicker Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="1" Margin="0,0,0,2" SelectedDate="{Binding Path=TradeDate, UpdateSourceTrigger=PropertyChanged}"/>
+            <Label Grid.Row="7">Settle Date:</Label>
+            <DatePicker Grid.Row="7" Grid.Column="1" Grid.ColumnSpan="1" Margin="0,0,0,2" SelectedDate="{Binding Path=SettleDate, UpdateSourceTrigger=PropertyChanged}"/>
+            <Label Grid.Row="8">Custodian:</Label>
+            <ComboBox ItemsSource="{Binding cmbCustodians}" Grid.Row="8" Grid.Column="1" Grid.ColumnSpan="1" Margin="0,0,0,2" SelectedItem="{Binding Path=Custodian, UpdateSourceTrigger=PropertyChanged}">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding }"/>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
+            <Label Grid.Row="9" Grid.Column="0" Content="{Binding NoteLabel}" HorizontalAlignment="Center" Grid.ColumnSpan="3"/>
+            <Button Command="{Binding AddFXTradeCommand}" Grid.Row="10" Grid.Column="1" Margin="0,10,0,0" IsEnabled="{Binding CanCreate}" Content="Add FX Trade" Style="{DynamicResource MaterialDesignFlatMidBgButton}"/>
+        </Grid>
+    </Border>
+
 </Window>
