--- a/PortfolioAce/Views/SystemSecurityPricesView.xaml
+++ b/PortfolioAce/Views/SystemSecurityPricesView.xaml
@@ -34,7 +34,7 @@
         </DockPanel>
 
         <DataGrid Grid.Row="0" Grid.Column="2" Grid.RowSpan="3" RowBackground="White" AlternatingRowBackground="#e8ffec"
-                 ItemsSource="{Binding Path=dgSecurityPrices, UpdateSourceTrigger=PropertyChanged}" VerticalScrollBarVisibility="Auto" AutoGenerateColumns="False" IsReadOnly="True">
+                 ItemsSource="{Binding Path=dgSecurityPrices, UpdateSourceTrigger=PropertyChanged}" VerticalScrollBarVisibility="Auto" AutoGenerateColumns="False" IsReadOnly="False">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Date" Binding="{Binding Date, StringFormat={}{0:dd/MM/yyyy}}" />
                 <DataGridTextColumn Header="Close Price" Binding="{Binding ClosePrice, StringFormat=N2}"  />
