--- a/PortfolioAce/Views/SystemSecurityPricesView.xaml
+++ b/PortfolioAce/Views/SystemSecurityPricesView.xaml
@@ -34,10 +34,10 @@
         </DockPanel>
 
         <DataGrid Grid.Row="0" Grid.Column="2" Grid.RowSpan="3" RowBackground="White" AlternatingRowBackground="#e8ffec"
-                 ItemsSource="{Binding Path=dgSecurityPrices, UpdateSourceTrigger=PropertyChanged}" VerticalScrollBarVisibility="Auto" AutoGenerateColumns="False" IsReadOnly="False">
+                 ItemsSource="{Binding Path=dgSecurityPrices,Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" VerticalScrollBarVisibility="Auto" AutoGenerateColumns="False" CanUserAddRows="True">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Date" Binding="{Binding Date, StringFormat={}{0:dd/MM/yyyy}}" />
-                <DataGridTextColumn Header="Close Price" Binding="{Binding ClosePrice, StringFormat=N2}"  />
+                <DataGridTextColumn Header="Date" Binding="{Binding Date, StringFormat={}{0:dd/MM/yyyy}}" IsReadOnly="False"/>
+                <DataGridTextColumn Header="Close Price" Binding="{Binding ClosePrice, StringFormat=N2}" IsReadOnly="False"  />
             </DataGrid.Columns>
         </DataGrid>
         <DockPanel Grid.Row="2" LastChildFill="False">
